Integrate Prettier for code formatting
Integrate Prettier for code formatting and update ESLint configuration.

* **package.json**:
  - Add `prettier` to `devDependencies`.
  - Add `prettier` script to format code.
* **.prettierrc**:
  - Add Prettier configuration file with default settings.
* **.prettierignore**:
  - Add Prettier ignore file to exclude certain files and directories.
* **.eslintrc.json**:
  - Add `prettier` to `extends` array.
  - Add `prettier` to `plugins` array.
  - Add Prettier rules to `rules` object.
* **.devcontainer/devcontainer.json**:
  - Add `esbenp.prettier-vscode` extension to `extensions` array.
* **.github/workflows/pipeline-electron-lint.yml**:
  - Add Prettier to linting workflow.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/akaday/electron?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,6 +36,7 @@
 				"dbaeumer.vscode-eslint",
 				"shakram02.bash-beautify",
 				"marshallofsound.gnls-electron",
+				"esbenp.prettier-vscode"
 			],
 			"settings": {
 				"editor.tabSize": 2,
